<resources>
    <string name="app_name">Absensi Karyawan</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibW9oYW1tYWRzdWxhZW1hbiIsImEiOiJjbGIyc25iMDcwN2phM3dweGpwcGs4dWR6In0.x29zkYiaZ92C5njbUOy5DA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="berhasil">Data Register Berhasil Di Simpan</string>
    <string name="resend">Kirim Ulang Kode</string>
    <string name="sandiempty">Kata Sandi Tidak Boleh Kosong</string>
    <string name="sandinotfound">Kata Sandi Tidak Cocok</string>
    <string name="norecieve">Send To</string>
    <string name="confirm">Konfirmasi Kode</string>
    <string name="app_moto">Solve Every Need</string>
    <string name="namakaryawan">Nama Karyawan</string>
    <string name="status_karyawan">Status Karyawan</string>
    <string name="button_signUp">Daftar Akun</string>
    <string name="login_persetujuan">Dengan login anda telah menyetujui syarat dan ketentuan yang berlaku</string>
    <string name="persetujuan_update">Dengan Ini Anda telah menyelesaikan pengisian data, dan bisa melanjutkan untuk login</string>
    <string name="personal_detail">Personal detail</string>
    <string name="hint_phone">Nomor Telepon</string>
    <string name="hint_email">Email</string>
    <string name="nikkaryawan">Nomor Identitas Karyawan</string>
    <string name="alamat_detail">Alamat Rumah</string>
    <string name="alamatkaryawan">Alamat Tempat Tinggal</string>
    <string name="lahir_detail">Tempat dan Tanggal Lahr</string>
    <string name="tanggalkaryawan">HH/BB/YYYY</string>
    <string name="infobiodata">Apakah Anda Sudah Mengisi Form Biodata Diri ? </string>
    <string name="tempatkaryawan">Tempat Lahir Karyawan</string>
    <string name="lokasikaryawan">Lokasi Karyawan Saat Ini</string>
    <string name="hint_ktp">Nomor Indetitas Kartu Penduduk</string>
    <string name="status_detail">Jenis Kelamin Karyawan</string>
    <string name="jender_karyawan">Jenis Kelamin</string>
    <string name="tambah_lokasi">Tambah Lokasi</string>
    <string name="menu_home">Home</string>
    <string name="menu_absen">Absen</string>
    <string name="menu_favourite">Admin</string>
    <string name="menu_profile">Profile</string>
    <string name="exit">Anda Yakin Keluar Dari Aplikasi</string>
    <string name="yes">IYA!</string>
    <string name="no">TIDAK!</string>
    <string name="lokasi_saat_ini">Lokasi Saat Ini</string>
    <string name="aktifkan_lokasi">Aktifkan Lokasi</string>
    <string name="anda_perlu_mengaktifkan_lokasi_untuk_menggunakan_aplikasi_ini">Anda perlu mengaktifkan lokasi untuk menggunakan aplikasi ini</string>
    <string name="button_dontHaveAccount">Sudah Mendaftrakan Akun | </string>
    <string name="button_signIn">Masuk Akun</string>
    <string name="lupa">Kirim</string>
    <string name="phoneempty">Nomor Telepon Belum Ditulis</string>
    <string name="emailempty">Email Belum Ditulis</string>
    <string name="addphoto">tolong tambahkan foto!</string>
    <string name="namaempty">Nama tidak boleh kosong</string>
    <string name="nikempty">Nik tidak boleh kosong</string>
    <string name="birtdayempty">ulang tahun tidak boleh kosong!</string>
    <string name="tempatyempty">Tempat Lahir tidak boleh kosong!</string>
    <string name="ktpempty">silahkan upload Gambar KTP!</string>
    <string name="cardempty">Nomor ID Card tidak boleh kosong</string>
    <string name="alamatempty">alamat Tidak Boleh Kosong!</string>
    <string name="lokasiempty">silahkan masukkan lokasi saat ini!</string>
    <string name="jenderempty">silahkan pilih jenis kelamin!</string>
    <string name="statusempty">status kepegawaian tidak boleh kosong!</string>
    <string name="error">Gagal Mengirimkan Data</string>
    <string name="error1">Gagal Mengirimkan Data!</string>
    <string name="phonepass">Telepon dan Kata Sandi tidak boleh kosong!</string>
    <string name="passempty">Kata sandi tidak boleh kosong!</string>
    <string name="text_noInternet">Tidak ada akses internet</string>
    <string name="phoneemailwrong">telepon atau kata sandi salah</string>
    <string name="wrongnumber">Format nomor telepon salah </string>
    <string name="waktu">Jam Kehadiran</string>
    <string name="tanggal">Tanggal Kehadiran</string>
    <string name="keterangan">Keterangan</string>
    <string name="waktuijin">Jam Perijinan</string>
    <string name="tanggalijin">Tanggal Ijin</string>
    <string name="response">Persetujuan Perijinan</string>
    <string name="namaresponse">Pemberi Ijin</string>
    <string name="foto_detail">Foto Karyawan</string>
    <string name="ktp_detail">Foto KTP</string>
    <string name="picture_button">Memotret</string>
    <string name="wajahdata">data wajah berhasil di simpan</string>
    <string name="info">Informasi</string>
    <string name="facedetect">Apakah Sudah Melakukan Proses Pengenalan Wajah</string>
    <string name="sudah">SUDAH!</string>
    <string name="belum">BELUM!</string>
    <string name="beritainfo">Gagal Menampilkan Data Berita</string>
    <string name="hadirinfo">Gagal Menampilkan Data Kehadiran</string>
    <string name="ijininfo">Gagal Menampilkan Data Perijinan</string>
    <string name="namapt">nama perusahaan</string>
    <string name="emailpt">Email Perusahaan</string>
    <string name="phonept">Nomor Telepon Perusahaan</string>
    <string name="alamatpt">Alamat Perusahaan</string>
    <string name="visipt">Visi Perusahaan</string>
    <string name="misipt">Misi Perusahaan</string>
    <string name="biopt">Tentang Perusahaan</string>
    <string name="nama">Nama Support Pembuat Aplikasi</string>
    <string name="nimsp">Nim</string>
    <string name="jurusansp">Jurusan</string>
    <string name="univsp">Universitas</string>
    <string name="emailsp">Email</string>
    <string name="support">Support</string>
    <string name="settings">Info Perusahaan</string>
    <string name="pagi">Selamat pagi</string>
    <string name="siang">Selamat siang</string>
    <string name="sore">Selamat sore</string>
    <string name="malam">Selamat malam</string>
    <string name="apppt">PT Redioro Tunggal Jaya</string>
    <string name="kehadiran">Masuk</string>
    <string name="perijinan">izin</string>
    <string name="pulang">Pulang</string>
    <string name="sakit">Sakit</string>
    <string name="hadir_detail">Data Kehadiran</string>
    <string name="button_hadir">Kehadiran</string>
    <string name="ijin_detail">Foto Perijinan</string>
    <string name="ijindata_detail">Data Perijinan</string>
    <string name="sakit_detail">Bukti Surat Keterangan Dokter</string>
    <string name="sakitdata_detail">List Data Sakit</string>
    <string name="pulang_detail">Data Karyawan Pulang</string>
    <string name="tanggalempty">Tanggal Tidak Boleh Kosong</string>
    <string name="tanggaldateempty">Tanggal Lahir Tidak Boleh Kosong</string>
    <string name="waktuempty">Waktu Tidak Boleh Kosong</string>
    <string name="keteranganempty">Keterangan Tidak Boleh Kosong</string>
    <string name="button_forget">Lupa Password</string>
    <string name="silakan_isi_nama_anda">Silakan isi password baru anda</string>
    <string name="detect">Mengenali Wajah</string>
    <string name="izindiberikan">Izin diberikan</string>
    <string name="duolarang">Beberapa Wajah Tidak diperbolehkan</string>
    <string name="wajahdetect">Wajah Terdeteksi</string>
    <string name="wajahtakkenal">Wajah Tidak Dikenal</string>
    <string name="tolakijin">Izin ditolak.</string>
    <string name="tidakdapatmendeteksiwajah">Tidak Dapat Mendeteksi Wajah</string>
    <string name="hint_wa">Nomor WhatsApp</string>
    <string name="update">Update Profile</string>
    <string name="isinama">Silakan Tuliskan Nama Anda</string>
    <string name="selectnama">Nama Karyawan : </string>
    <string name="waiting_pleaseWait">Silakan Tunggu</string>
    <string name="nama_perusahaan">nama perusahaan</string>
    <string name="moto_perusahaan">Moto Perusahaan</string>
    <string name="websitept">Website Perusahaan</string>
    <string name="password">Password</string>
    <string name="lupapass">Lupa Password</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="silakan_masuk_menggunakan_akun_yang_telah_terdaftar">Silakan Masuk Menggunakan Akun Yang Telah Terdaftar</string>
    <string name="beritaData">List Data Berita</string>
    <string name="kehadiranData">List Data Kehadiran</string>
    <string name="perijinanData">List Data Perijinan</string>
    <string name="judul_berita">judul Berita</string>
    <string name="desc_berita">Deskripsi Berita</string>
    <string name="tanggal_pulang">Tanggal</string>
    <string name="waktu_pulang">Waktu</string>
    <string name="waktusakit">"Jam "</string>
    <string name="tanggalsakit">Tanggal Karyawan Sakit</string>
    <string name="jam_operasional">Jam Operasional</string>
    <string name="kembali">kembali</string>
    <string name="fakultas">Fakultas</string>
    <string name="pendidikan">Program Studi</string>
    <string name="asalsekolah">Asal Sekolah</string>
    <string name="pulangData">List Data Pulang</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="retype_sandi_baru">Konfirmasi Kata Sandi</string>
    <string name="pasang_foto_profile_mu_semua_orang_akan_bisa_lihat">Pasang Foto Profile Mu! Semua Orang Akan bisa Lihat!</string>
    <string name="pasang_foto_ktp_anda_untuk_keperluan_administrasi_perusahaan">Pasang Foto KTP Anda Untuk Keperluan Administrasi Perusahaan</string>
    <string name="history_absensi">History Absensi</string>
    <string name="more">More</string>
    <string name="profileku">ProfilekKu</string>
    <string name="biodata_diri">BIODATA DIRI</string>
    <string name="idcardkaryawan">Nomor Induk Pegawai</string>
    <string name="setting">Pengaturan</string>
    <string name="editbiodata">Edit Profile</string>
    <string name="dataAbsen">Data Absensi</string>
    <string-array name="jender">
        <item>Pilih Jenis Kelamin</item>
        <item>Laki Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="status">
        <item>Pilih Jenis Status Kepegawaian</item>
        <item>Karyawan Tetap</item>
        <item>Karyawan Kontrak</item>
        <item>Magang</item>
    </string-array>
</resources>