<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/line_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/light_gray"
        android:layout_margin="25dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tanggalijinhis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/waktuijinhis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waktu"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImagehistijin"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/profile"/>
        <TextView
            android:id="@+id/namaijinhis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namakaryawan"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/keteranganijinhis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/lokasijinhis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lokasikaryawan"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/statusijinhis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_karyawan"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black" />
    </LinearLayout>
</RelativeLayout>