<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/line_hide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:id="@+id/tanggalhadirhis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/waktuhadirhis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waktu"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImagehisthadir"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/profile"/>
        <TextView
            android:id="@+id/namahadirhis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namakaryawan"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/lokasihadirhis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lokasikaryawan"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/statushadirhis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_karyawan"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>