<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/imageheader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:background="@color/colorgradient">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/imagelogo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                app:tint="@color/white"
                android:padding="2dp"/>
            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imagelogo"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/apppt"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"/>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/nav_headerUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:cardBackgroundColor="@color/fiftypercenttranparent"
        app:cardCornerRadius="15dp"
        app:cardElevation="14dp"
        app:cardMaxElevation="17dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:contentPaddingTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logoklikusers"
                android:layout_width="210dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/lineKehadiran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/nav_headerUsers"
        android:background="@color/light_ferozi"
        android:weightSum="2">
        <!--  Hadir   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/phoneClickUsers"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/smartphoneaboutuserstext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint_phone"/>
        </LinearLayout>
        <!--  Perijian   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/gmailClickUsers"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/emailaboutuserstext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint_email"/>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/lineKehadiran">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:id="@+id/motoperusahaanaboutusers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moto_perusahaan"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/round_edittext_background"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/jamperusahaanaboutusers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jam_operasional"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:background="@drawable/round_edittext_background"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/alamatperusahaanaboutusers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamatpt"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:background="@drawable/round_edittext_background"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/buttonkembaliklikaboutusers"
                android:layout_width="325dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_round_1"
                android:text="@string/kembali"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:textColor="@color/light_gray"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>