<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back_home"
                android:layout_width="40dp"
                android:layout_height="30dp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <!--   Menu Absen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_absen"
            android:textSize="25dp"
            android:paddingLeft="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">
            <ImageView
                android:id="@+id/absen_masuk"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/absen_ijin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">
            <ImageView
                android:id="@+id/absen_sakit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/absen_pulang"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <!-- Menu History   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_absensi"
            android:textSize="25dp"
            android:paddingLeft="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">
            <ImageView
                android:id="@+id/history_masuk"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/history_ijin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp">
            <ImageView
                android:id="@+id/history_sakit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/history_pulang"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <!-- Menu History   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profileku"
            android:textSize="25dp"
            android:paddingLeft="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">
            <ImageView
                android:id="@+id/profile_click_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/profile"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>